Changes in mirt 0.9.x

- seperate 'free_var' and 'free_cov' invariance options abailable in multipleGroup

- new CONSTRAIN and CONSTRAINB arugments in mirt.model() syntax for specifying equality 
  constraints explicitly for parameters accross items and groups. Also the PRIOR = ... 
  specification was brought back and uses a similar format as the new CONSTRAIN options

- plot(..., type = 'trace') now supports polytomous and dichotomous tracelines, and type = 'infotrace'
  has a better y-axis range

- removed the '1PL' itemtype since the name was too ambiguous. Still possible to obtain however by
  applying slope constraints to the 2PL/graded response models

- plot() contains a which.items argument to specify which items to plot in aggregate type, such as 
  'infotrace' and 'trace'

- fitIndicies() will return CFI.M2 and TLI.M2 if the argument calcNull = TRUE is passed. CFI stats also 
  normed to fall between 0 and 1

- data.frame returned from mod2values() and pars = 'values' now contains a column indicating 
  the internal item class

- use ginv() from MASS package to improve accuracy in fitIndices() calculation of M2

BUG FIXES

- fix error thrown in PLCI.mirt when parameter value is equal to the bound

Changes in mirt 0.9.0

NEW FEATURES

- PLCI.mirt() function added for computing profiled likelihood standard errors. Currenly only applicable
  to unidimensional models

- prior distributions returned in the pars = 'values' data.frame along with the input parameters, 
  and can be edited and returned as well

- full.scores option for residuals() to compute residuals for each row in the original data

- bfactor() can include an additional model argument for modeling two-tier structures introduced
  by Cai (2010), and now supports a 'group' input for multiple group analyses

- added a general Ramsey (1975) acceleration to EM estimation by default. Can be disable with 
  accelerate = FALSE (and is done so automatically when estimating SEM standard errors)
