@@ -96,7 +96,7 @@ test_that('poly', {
     expect_equal(cfs, c(0.997, 1.008, 0.5031, -0.5092, -1.0034, -1, 0.8616, 1.008, 0.5031, -0.5092, -1.0034, -0.7723, 1.0369, 1.008, 0.5031, -0.5092, -1.0034, -0.5635, 0.9486, 1.008, 0.5031, -0.5092, -1.0034, -0.2613, 0.9941, 1.008, 0.5031, -0.5092, -1.0034, -0.0998, 0.9047, 1.008, 0.5031, -0.5092, -1.0034, 0.1646, 0.9475, 1.008, 0.5031, -0.5092, -1.0034, 0.3439, 1.09, 1.008, 0.5031, -0.5092, -1.0034, 0.4608, 0.8921, 1.008, 0.5031, -0.5092, -1.0034, 0.7628, 0.966, 1.008, 0.5031, -0.5092, -1.0034, 0.9779, 0, 1),
                  tollerance = 1e-2)    
     cfs <- as.numeric(do.call(c, coef(rsm, verbose = FALSE, digits=4)))
-    expect_equal(cfs, c(1, 0, -2.0358, -1.2214, -2.0469, -0.9382, 0, 1, 0, -2.0358, -1.2214, -2.0469, -0.9382, 0.2185, 1, 0, -2.0358, -1.2214, -2.0469, -0.9382, 0.3957, 1, 0, -2.0358, -1.2214, -2.0469, -0.9382, 0.7917, 1, 0, -2.0358, -1.2214, -2.0469, -0.9382, 0.9369, 1, 0, -2.0358, -1.2214, -2.0469, -0.9382, 1.1568, 1, 0, -2.0358, -1.2214, -2.0469, -0.9382, 1.3422, 1, 0, -2.0358, -1.2214, -2.0469, -0.9382, 1.4018, 1, 0, -2.0358, -1.2214, -2.0469, -0.9382, 1.7568, 1, 0, -2.0358, -1.2214, -2.0469, -0.9382, 2.011, 0, 0.1103),
+    expect_equal(cfs, c(1, 0, -2.036, -1.2215, -2.0469, -0.9381, 0, 1, 0, -2.036, -1.2215, -2.0469, -0.9381, 0.2187, 1, 0, -2.036, -1.2215, -2.0469, -0.9381, 0.3959, 1, 0, -2.036, -1.2215, -2.0469, -0.9381, 0.7919, 1, 0, -2.036, -1.2215, -2.0469, -0.9381, 0.9371, 1, 0, -2.036, -1.2215, -2.0469, -0.9381, 1.1571, 1, 0, -2.036, -1.2215, -2.0469, -0.9381, 1.3424, 1, 0, -2.036, -1.2215, -2.0469, -0.9381, 1.4021, 1, 0, -2.036, -1.2215, -2.0469, -0.9381, 1.757, 1, 0, -2.036, -1.2215, -2.0469, -0.9381, 2.0113, 0, 0.1103),
                  tollerance = 1e-2)        
     expect_equal(rsm@df, 1945)
     expect_equal(grsm@df, 1936)
